# FastPeptideMatching

./: .gitmodules  Cargo.toml  README.md  a.txt  functionality.txt  level1.txt  sdfsdf  search.txt  search_big.txt  test.txt
bitarray/: Cargo.toml
bitarray/src/: binary.rs  lib.rs  main.rs
checksum_tool/: Cargo.toml
checksum_tool/src/: lib.rs
fa-compression/: Cargo.toml  README.md
fa-compression/benches/: bench_main.rs  util.rs
fa-compression/benches/algorithm1/: decode.rs  encode.rs
fa-compression/benches/algorithm2/: decode.rs  encode.rs  mod.rs
fa-compression/src/: lib.rs
fa-compression/src/algorithm1/: decode.rs  encode.rs  mod.rs
fa-compression/src/algorithm2/: decode.rs  encode.rs  mod.rs
fm-index-unipept/: Cargo.toml
fm-index-unipept/src/: lib.rs  main.rs
libsais64-rs/: Cargo.toml  builder.rs  libsais-wrapper.h
libsais64-rs/src/: lib.rs
sa-mappings/: Cargo.toml  README.md
sa-mappings/src/: functionality.rs  lib.rs  proteins.rs  taxonomy.rs
src/: cursor.rs  lca_calculator.rs  lib.rs  main.rs  read_only_cursor.rs  search_cursor.rs  searcher.rs  taxon_id_calculator.rs  tree.rs  tree_builder.rs
suffixarray/: Cargo.toml  build_suffix_array.pbs  search_using_existing_index.pbs  search_using_existing_index_bound.pbs  search_using_existing_index_occurrences_count.pbs  search_using_existing_index_taxon_id.pbs  suffix_array.pbs
suffixarray/src/: binary.rs  functional_annotations.rs  index_load_error.rs  lib.rs  main.rs  peptide_search.rs  sa_searcher.rs  searcher.rs  sequence_bitpattern.rs  suffix_to_protein_index.rs  thread_error.rs  util.rs
suffixarray_builder/: Cargo.toml  build_suffix_array.pbs
suffixarray_builder/src/: binary.rs  lib.rs  main.rs
suffixarray_server/: Cargo.toml
suffixarray_server/src/: main.rs  searcher.rs
suffixtree/: Cargo.toml
suffixtree/src/: cursor.rs  lib.rs  main.rs  searcher.rs  tree.rs  tree_builder.rs  tree_taxon_id_calculator.rs
testfiles/: small_taxonomy.tsv
tsv-utils/: Cargo.toml
tsv-utils/src/: il_equality.rs  lib.rs  taxon_id_calculator.rs
