[package]
name = "fa-compression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
opt-level = 0
name = "bench_main"
harness = false

[profile.bench]
opt-level=3
