[package]
name = "sa-mappings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tempdir = "0.3.7"

[dependencies]
fa-compression = { path = "../fa-compression" }
bytelines = "2.5.0"
umgap = "1.1.0"
serde_json = "1.0.115"
serde = "1.0.197"
