[package]
name = "suffixarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
get-size = "0.1.4"
libdivsufsort-rs = "0.1.0"
tsv-utils = { path = "../tsv-utils" }
umgap = "1.1.0"
libsais64-rs = { path = "../libsais64-rs" }
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
