[package]
name = "suffixarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
umgap = "1.1.0"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
suffixarray_builder = { path = "../suffixarray_builder" }
sa-mappings = { path = "../sa-mappings" }
serde_json = "1.0.116"
