[package]
name = "suffixarray_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
suffixarray = { path = "../suffixarray" }
clap = { version = "4.5.1", features = ["derive"] }
rayon = "1.8.1"
tsv-utils = { path = "../tsv-utils"}